tests/baselines/reference/typeParameterExtendingUnion2(strict=true).errors.txt
typeParameterExtendingUnion2.ts(2,28): error TS7008: Member 'meow' implicitly has an 'any' type.
typeParameterExtendingUnion2.ts(3,28): error TS7008: Member 'woof' implicitly has an 'any' type.


==== typeParameterExtendingUnion2.ts (2 errors) ====
    class Animal { run() { } }
    class Cat extends Animal { meow }
                               ~~~~
!!! error TS7008: Member 'meow' implicitly has an 'any' type.
    class Dog extends Animal { woof }
                               ~~~~
!!! error TS7008: Member 'woof' implicitly has an 'any' type.
    
    function run(a: Cat | Dog) {
        a.run();
    }
    
    function f<T extends Cat | Dog>(a: T) {
        a.run();
        run(a);
    }